Wed Dec  1 15:26:20 CET 2004 Daniel Veillard <veillard@redhat.com>

	* TODO: updated
	* configure.in: minor change for compiler options
	* lib/gam_error.[ch] libgamin/gam_api.c server/gam_connection.[ch]
	  server/gam_server.[ch]: trying to improve debugging

Fri Nov 26 11:01:19 CET 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: real release of 0.0.18
	* libgamin/gam_api.c: (FAMPending): only select/read
	  when we don't have a complete event in the buffer.
	  patch from Mark McLoughlin  <mark@skynet.ie>

Thu Nov 25 16:07:04 CET 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: fixed a const pbm

Thu Nov 25 15:59:45 CET 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: 0.0.18 sounds better than 0.1.0 really
	  making sure that debug support is compiled in
	* libgamin/gam_api.c libgamin/gam_fork.c server/gam_channel.c
	  server/gam_connection.c server/gam_dnotify.c server/gam_inotify.c
	  server/gam_listener.c server/gam_poll.c server/gam_server.c
	  server/gam_subscription.c: switched all usage of gam_debug to
	  the GAM_DEBUG macro to avoid paying for debug calls when not
	  asked for.

Thu Nov 25 13:59:34 CET 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in TODO gamin.pc.in gamin.spec.in: updated, will 
	  release a 0.1.0 RC1 today
	* lib/gam_error.c lib/gam_error.h: first step toward avoiding
	  debug handling costs when not debugging
	* server/gam_connection.c server/gam_listener.c server/gam_node.[ch]
	  server/gam_poll.c server/gam_tree.[ch]: checked all GList uses
	  in the server, try to make 100% sure there is no double free of
	  list items or reuse of freed list item which could explain the
	  loops found in bug #132354 , cleanups, remove use of g_list_foreach.

Thu Oct 28 15:32:16 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* gamin.spec.in: fixed a packaging bug Red Hat #135417

Wed Oct 20 19:02:22 CEST 2004 Daniel Veillard <veillard@redhat.com>
