@@ -42,6 +42,7 @@ gboolean             gam_subscription_wants_event  (GamSubscription *sub,
 						    int          is_dir_node,
 						    GaminEventType   event,
 						    int force);
+void                 gam_subscription_debug        (GamSubscription *sub);
 G_END_DECLS
 
 #endif /* __GAM_SUBSCRIPTION_H__ */
