@@ -1,3 +1,10 @@
+Thu Dec  2 01:17:09 CET 2004 Daniel Veillard <veillard@redhat.com>
+
+	* autogen.sh: removed reference to old m4 subdir
+	* server/gam_connection.c server/gam_listener.[ch]
+	  server/gam_subscription.[ch]: extend debugging to add listeners
+	  and all subscription states from a given connection.
+
 Wed Dec  1 15:26:20 CET 2004 Daniel Veillard <veillard@redhat.com>
 
 	* TODO: updated
